--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ cryptography>=42.0.8
 python-dotenv>=1.0.1
 pymongo==4.5.0
 pydantic>=2.6.4
+pydantic-settings>=2.2.0
 email-validator>=2.2.0
 pyjwt>=2.10.1
 bcrypt==4.1.3
@@ -24,4 +25,8 @@ numpy>=1.26.0
 python-multipart>=0.0.9
 jq>=1.6.0
 typer>=0.9.0
-emergentintegrations==0.1.0
+google-generativeai>=0.8.0
+slowapi>=0.1.9
+gunicorn>=22.0
+python-json-logger>=2.0
+sentry-sdk[fastapi]>=2.0
